demo login admin XDDDD

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,14 +24,14 @@
     <TextView
         android:id="@+id/txtInstagram"
         android:layout_width="312dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="68dp"
-        android:gravity="center"
+        android:layout_height="83dp"
+        android:layout_marginTop="48dp"
         android:background="@android:color/transparent"
-        android:textColor="#FFFFFF"
+        android:fontFamily="cursive"
+        android:gravity="center"
         android:text="@string/instagram"
-        android:textSize="30sp"
-        android:fontFamily="sans-serif-condensed"
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,8 @@
         android:ems="10"
         android:hint="@string/username"
         android:inputType="text"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtInstagram"
@@ -59,9 +60,11 @@
         android:layout_marginTop="16dp"
         android:autofillHints=""
         android:ems="10"
+        android:fontFamily="sans-serif"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
